tests/snapshots/snapshots__interpreter@unboxed_run.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/unboxed_run.pr
---
30
19
=> ()
