tests/snapshots/snapshots__interpreter@unionfind.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/unionfind.pr
---
true
false
1
true
=> ()
