tests/snapshots/snapshots__interpreter@var_basic.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/var_basic.pr
---
7
302
85138
=> ()
