tests/snapshots/snapshots__interpreter@var_effects.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/var_effects.pr
---
1
2
3
300
=> ()
