tests/snapshots/snapshots__interpreter@var_in_handler.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/var_in_handler.pr
---
211
=> ()
