tests/snapshots/snapshots__interpreter@var_string.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/var_string.pr
---
hello world
=> ()
