tests/snapshots/snapshots__interpreter@var_under_handlers.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/var_under_handlers.pr
---
215
=> ()
