tests/snapshots/snapshots__interpreter@vec_head.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/vec_head.pr
---
70=> ()
