tests/snapshots/snapshots__interpreter@vec_nat.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/vec_nat.pr
---
21=> ()
