tests/snapshots/snapshots__interpreter@visibility.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/visibility.pr
---
12
9
=> ()
